// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar renders with custom day render 1`] = `
<div
  className="Calendar"
>
  <div
    className="Calendar-header"
  >
    <button
      onClick={[Function]}
    >
      «
    </button>
    <div
      className="Calendar-header-currentDate"
    >
      November 2017
    </div>
    <button
      onClick={[Function]}
    >
      »
    </button>
  </div>
  <div
    className="Calendar-grid"
  >
    <span>
      29
    </span>
    <span>
      30
    </span>
    <span>
      31
    </span>
    <span>
      1
    </span>
    <span>
      2
    </span>
    <span>
      3
    </span>
    <span>
      4
    </span>
    <span>
      5
    </span>
    <span>
      6
    </span>
    <span>
      7
    </span>
    <span>
      8
    </span>
    <span>
      9
    </span>
    <span>
      10
    </span>
    <span>
      11
    </span>
    <span>
      12
    </span>
    <span>
      13
    </span>
    <span>
      14
    </span>
    <span>
      15
    </span>
    <span>
      16
    </span>
    <span>
      17
    </span>
    <span>
      18
    </span>
    <span>
      19
    </span>
    <span>
      20
    </span>
    <span>
      21
    </span>
    <span>
      22
    </span>
    <span>
      23
    </span>
    <span>
      24
    </span>
    <span>
      25
    </span>
    <span>
      26
    </span>
    <span>
      27
    </span>
    <span>
      28
    </span>
    <span>
      29
    </span>
    <span>
      30
    </span>
    <span>
      1
    </span>
    <span>
      2
    </span>
  </div>
</div>
`;

exports[`Calendar renders with custom header render 1`] = `
<div
  className="Calendar"
>
  <div>
    <div
      className="Calendar-header"
    >
      <button
        onClick={[Function]}
      >
        «
      </button>
      <div
        className="Calendar-header-currentDate"
      >
        November 2017
      </div>
      <button
        onClick={[Function]}
      >
        »
      </button>
    </div>
    <div
      className="Calendar-grid Calendar-week-day-names mb-sm"
    >
      <div
        className="Calendar-grid-item"
      >
        Mon
      </div>
      <div
        className="Calendar-grid-item"
      >
        Tue
      </div>
      <div
        className="Calendar-grid-item"
      >
        Wed
      </div>
      <div
        className="Calendar-grid-item"
      >
        Thu
      </div>
      <div
        className="Calendar-grid-item"
      >
        Fri
      </div>
      <div
        className="Calendar-grid-item"
      >
        Sat
      </div>
      <div
        className="Calendar-grid-item"
      >
        Sun
      </div>
    </div>
  </div>
  <div
    className="Calendar-grid"
  >
    <div
      className="Calendar-grid-item prevMonth"
      onClick={[Function]}
    >
      29
    </div>
    <div
      className="Calendar-grid-item prevMonth"
      onClick={[Function]}
    >
      30
    </div>
    <div
      className="Calendar-grid-item prevMonth"
      onClick={[Function]}
    >
      31
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      1
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      2
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      3
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      4
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      5
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      6
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      7
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      8
    </div>
    <div
      className="Calendar-grid-item Calendar-grid-item--current"
      onClick={[Function]}
    >
      9
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      10
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      11
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      12
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      13
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      14
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      15
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      16
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      17
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      18
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      19
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      20
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      21
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      22
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      23
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      24
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      25
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      26
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      27
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      28
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      29
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      30
    </div>
    <div
      className="Calendar-grid-item nextMonth"
      onClick={[Function]}
    >
      1
    </div>
    <div
      className="Calendar-grid-item nextMonth"
      onClick={[Function]}
    >
      2
    </div>
  </div>
</div>
`;

exports[`Calendar renders with minimal props 1`] = `
<div
  className="Calendar"
>
  <div
    className="Calendar-header"
  >
    <button
      onClick={[Function]}
    >
      «
    </button>
    <div
      className="Calendar-header-currentDate"
    >
      November 2017
    </div>
    <button
      onClick={[Function]}
    >
      »
    </button>
  </div>
  <div
    className="Calendar-grid"
  >
    <div
      className="Calendar-grid-item prevMonth"
      onClick={[Function]}
    >
      29
    </div>
    <div
      className="Calendar-grid-item prevMonth"
      onClick={[Function]}
    >
      30
    </div>
    <div
      className="Calendar-grid-item prevMonth"
      onClick={[Function]}
    >
      31
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      1
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      2
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      3
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      4
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      5
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      6
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      7
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      8
    </div>
    <div
      className="Calendar-grid-item Calendar-grid-item--current"
      onClick={[Function]}
    >
      9
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      10
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      11
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      12
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      13
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      14
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      15
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      16
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      17
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      18
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      19
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      20
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      21
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      22
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      23
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      24
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      25
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      26
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      27
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      28
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      29
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      30
    </div>
    <div
      className="Calendar-grid-item nextMonth"
      onClick={[Function]}
    >
      1
    </div>
    <div
      className="Calendar-grid-item nextMonth"
      onClick={[Function]}
    >
      2
    </div>
  </div>
</div>
`;

exports[`Calendar renders with weekOffset=1 1`] = `
<div
  className="Calendar"
>
  <div
    className="Calendar-header"
  >
    <button
      onClick={[Function]}
    >
      «
    </button>
    <div
      className="Calendar-header-currentDate"
    >
      November 2017
    </div>
    <button
      onClick={[Function]}
    >
      »
    </button>
  </div>
  <div
    className="Calendar-grid"
  >
    <div
      className="Calendar-grid-item prevMonth"
      onClick={[Function]}
    >
      30
    </div>
    <div
      className="Calendar-grid-item prevMonth"
      onClick={[Function]}
    >
      31
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      1
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      2
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      3
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      4
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      5
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      6
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      7
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      8
    </div>
    <div
      className="Calendar-grid-item Calendar-grid-item--current"
      onClick={[Function]}
    >
      9
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      10
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      11
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      12
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      13
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      14
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      15
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      16
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      17
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      18
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      19
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      20
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      21
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      22
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      23
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      24
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      25
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      26
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      27
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      28
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      29
    </div>
    <div
      className="Calendar-grid-item"
      onClick={[Function]}
    >
      30
    </div>
    <div
      className="Calendar-grid-item nextMonth"
      onClick={[Function]}
    >
      1
    </div>
    <div
      className="Calendar-grid-item nextMonth"
      onClick={[Function]}
    >
      2
    </div>
    <div
      className="Calendar-grid-item nextMonth"
      onClick={[Function]}
    >
      3
    </div>
  </div>
</div>
`;
